<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
            android:id="@+id/vBackgroundBig"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.BigPlayerActivity"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageButton
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_48"
                    android:background="@null" />

            <LinearLayout
                    android:id="@+id/llPlaylistName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:id="@+id/tvPlayerContextSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playercontextsubtitle"
                        android:maxLines="2"
                        android:textAlignment="center"
                        android:layout_gravity="center" />

                <TextView
                        android:id="@+id/tvPlayerContextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playercontexttitle"
                        android:maxLines="2"
                        android:minLines="2"
                        android:textAlignment="center"
                        android:layout_gravity="center" />

            </LinearLayout>

            <ImageButton
                    android:id="@+id/btnOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_more_vert_48"
                    android:background="@null" />
        </LinearLayout>

        <ImageView
                android:id="@+id/ivPlayerCover"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/llPlayerInfoBig"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:id="@+id/tvPlayerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/title"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true" />

                <TextView
                        android:id="@+id/tvPlayerArtist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/artist" />

            </LinearLayout>

            <ImageButton
                    android:id="@+id/btnQueue"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/ic_baseline_queue_48" />

            <ImageButton
                    android:id="@+id/btnLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:src="@drawable/ic_not_liked_48" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

            <SeekBar
                    android:id="@+id/sbProgress"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:progressTint="@color/spotify_green"
                    android:thumbTint="@color/spotify_green" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tvPlayerCurrentProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1:20"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/tvPlayerMaxProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3:44"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <ImageButton
                    android:id="@+id/btnShuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_shuffle_off_48"
                    android:background="@null"
                    android:layout_weight="1" />

            <ImageButton
                    android:id="@+id/btnPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_skip_previous_48"
                    android:background="@null"
                    android:layout_weight="1" />

            <ImageButton
                    android:id="@+id/btnPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_play_arrow_48"
                    android:background="@null"
                    android:layout_weight="1" />

            <ImageButton
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_skip_next_48"
                    android:background="@null"
                    android:layout_weight="1" />

            <ImageButton
                    android:id="@+id/btnRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_repeat_off_48"
                    android:background="@null"
                    android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                    android:id="@+id/tvPlayerDevice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swKeepAwake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/Color1SwitchStyle"
                    android:text="@string/keep_alive" />

            <ImageButton
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp" />

            <ImageButton
                    android:id="@+id/btnQueueList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_queue_24"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>